traffic-management/ingress-traffic/virtual-service.yml
# ingress-traffic/virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  # - mesh
  http:
  - route:
    - destination:
        host: httpbin
        port:
          number: 8000
